# aihero

./: .gitignore
app/: app.py  main.py  pyproject.toml  requirements.txt  search_agent.py
course/: example.ipynb  pyproject.toml  readmd.ipynb  search.ipynb
course/logs/: faq_agent_20260328_185114_55e057.json  faq_agent_20260328_185205_47be6e.json  faq_agent_20260328_185212_d7a592.json
project/: pyproject.toml  readmd.ipynb  search.ipynb
